--- a/appdetails.json
+++ b/appdetails.json
@@ -16,6 +16,6 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"us1.freeopenvpn.org","port":"12352","active":"true","signal":"a"},
+    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"us1.freeopenvpn.org","active":"true","signal":"a"},
   ]
 }
