--- a/appdetails.json
+++ b/appdetails.json
@@ -17,5 +17,7 @@
   ],
   "free":[
     {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"us1.freeopenvpn.org","active":"true","signal":"a"},
+    {"id":1, "file":0, "city":"Hamburg","country":"Germany","image":"germany","ip":"us1.freeopenvpn.org","active":"true","signal":"b"},
+    {"id":2, "file":1, "city":"Los Angeles CA","country":"United States","image":"unitedstates","ip":"us1.freeopenvpn.org","active":"true","signal":"c"}
   ]
 }
