--- a/appdetails.json
+++ b/appdetails.json
@@ -16,7 +16,6 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"219.100.37.55","active":"true","signal":"a"},
-    {"id":1, "file":1, "city":"Los Angeles CA","country":"United States","image":"unitedstates","ip":"us1.freeopenvpn.org","active":"true","signal":"a"}
+    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"219.100.37.55","active":"true","signal":"a"}
   ]
 }
