--- a/appdetails.json
+++ b/appdetails.json
@@ -17,5 +17,6 @@
   ],
   "free":[
     {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"219.100.37.55","active":"true","signal":"a"}
+    {"id":1, "file":1, "city":"Essen","country":"Germany","image":"germany","ip":"219.100.37.55","active":"true","signal":"b"}
   ]
 }
