--- a/appdetails.json
+++ b/appdetails.json
@@ -16,6 +16,6 @@
     {"id":6, "app":"com.get.client"}
   ],
   "free":[
-    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"vpn599459764.opengw.net","active":"true","signal":"a"}
+    {"id":0, "file":0, "city":"Essen","country":"Germany","image":"germany","ip":"51.68.152.226","active":"true","signal":"a"}
   ]
 }
